--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -58,19 +58,43 @@ jobs:
         with:
           arguments: integTest
 
-  deploy:
+  contract-test:
     runs-on: ubuntu-latest
-    needs: [test, integTest]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
-        with:
-          arguments: integTest
+    needs: [ test, integTest ]
+      - run: echo "Run contract test"
+
+  sonar:
+    runs-on: ubuntu-latest
+    needs: [ test, integTest ]
+      - run: echo "Run sonar analysis"
+
+  blackduck:
+    runs-on: ubuntu-latest
+    needs: [ test, integTest ]
+      - run: echo "Run black duck scans"
+
+  owasp:
+    runs-on: ubuntu-latest
+    needs: [ test, integTest ]
+      - run: echo "run owasp sec checks"
+
+  build-image:
+    runs-on: ubuntu-latest
+    needs: [contract-test, sonar, blackduck, owasp]
+    - run: echo "build docker image"
+    - run: echo "push image to ecr"
+
+  deploy-dev:
+    runs-on: ubuntu-latest
+    needs: build-image
+    - run: echo "Deploy to dev"
+
+  deploy-staging:
+    runs-on: ubuntu-latest
+    needs: deploy-dev
+    - run: echo "Deploy to staging"
+
+  deploy-preprod:
+    runs-on: ubuntu-latest
+    needs: [deploy-staging]
+    - run: echo "Deploy to preprod"
