--- a/.github/workflows/manualProd.yaml
+++ b/.github/workflows/manualProd.yaml
@@ -10,9 +10,11 @@ on: [workflow_dispatch]
 jobs:
   e2e:
     runs-on: ubuntu-latest
-    - run: echo "Run e2e"
+    steps:
+      - run: echo "Run e2e"
 
   deployProd:
     runs-on: ubuntu-latest
     needs: e2e
-    - run: echo "Deploy to prod"
+    steps:
+      - run: echo "Deploy to prod"
